--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.7",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
