--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.7",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -31,5 +33,6 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
-  }
+  },
+  "proxy": "http://localhost:8800/api/"
 }
