--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,6 +29,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build-and-push-images
     
     steps:
       - name: Checkout repository
