--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /usr/src/app
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json .
 
+# Accept build-time environment variable
+ARG VITE_BASE_API_URI
+
 # Install the client dependencies
 RUN npm install
 
